--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -5,11 +5,13 @@
 {% block page_content %}
     {% block posts %}
     {% for post in posts %}
-        <h3>{{ post.title }}</h3>
+        <h3><a href = "{% url 'post_detail' slug=post.slug %}"> {{ post.title }} </a></h3>
         <small>
             {{ post.created_on.date }} | Tags:
             {% for tag in post.tags.all %}
-                    {{ tag.name }}
+                    <a href = "{% url 'post_tag' tag.name %}">
+                        {{ tag.name }}
+                    </a>
             {% endfor %}
     {% endfor %}
     {% endblock posts %}
