2/16 work. Slugs are working, and we have a homepage button.

--- a/posts/templates/posts/tag.html
+++ b/posts/templates/posts/tag.html
@@ -1,7 +1,7 @@
 <!-- posts/templates/posts/tag.html -->
 
-{% extends "base.html" %}
+{% extends "/Users/portermorgan/Documents/Python/food_blog/posts/templates/posts/index.html" %}
 
-{% block page_content %}
-    
-{% endblock page_content %}
+{% block page_title %}
+    <h2> {{ tag }} </h2>
+{% endblock page_title %}
