--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -2,14 +2,22 @@
 
 {% extends "base.html" %}
 
+{% block page_title %}
+    <h2> {{ post.title }} </h2>
+{% endblock page_title %}
+
 {% block page_content %}
+
+    <p>{{ post.body | linebreaks }}</p>
+
+
     <small>
         {{ post.created_on.date }} | Tags:
         {% for tag in post.tags.all %}
-            <a href="{% url 'post_tag' tag.name %}">
+            <a href="{% url 'posts:post_tag' tag.name %}">
                 {{ tag.name }}
             </a>
         {% endfor %}
     </small>
-    <p>{{ post.body | linebreaks }}</p>
+    
 {% endblock page_content %}
