--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -2,17 +2,19 @@
 
 {% extends "base.html" %}
 
+{% block page_title %}
+    <h2> All posts </h2>
+{% endblock page_title %}
+
 {% block page_content %}
     {% block posts %}
     {% for post in posts %}
-        <h3><a href = "{% url 'post_detail' slug=post.slug %}"> {{ post.title }} </a></h3>
-        <small>
-            {{ post.created_on.date }} | Tags:
-            {% for tag in post.tags.all %}
-                    <a href = "{% url 'post_tag' tag.name %}">
-                        {{ tag.name }}
-                    </a>
-            {% endfor %}
+        <h3><a href = "{% url 'posts:post_detail' slug=post.slug %}"> {{ post.title }} </a></h3>
+            {{ post.created_on.date }}
+            <p> Tags: {% for tag in post.tags.all %}
+                    <a href = "{% url 'posts:post_tag' tag.name %}">
+                        {{ tag.name }} </a>
+            {% endfor %} </p>
     {% endfor %}
     {% endblock posts %}
 {% endblock page_content %}
