working on admin site, and getting import/export working

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -17,6 +17,8 @@
             width = "auto"
         />
     </figure>
+    <em> {{ post.source}} </em>
+
     <p>{{ post.body | linebreaks }}</p>
 
 
