working on getting source links to work

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -17,7 +17,7 @@
             width = "auto"
         />
     </figure>
-    <em> {{ post.source}} </em>
+    <em> <a href="{{ post.source_link  }}" target="_blank" rel="noopener noreferrer" >{{ post.source }} </a> </em>
 
     <p>{{ post.body | linebreaks }}</p>
 
