first push in a while. lots has changed

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -1,6 +1,7 @@
 <!-- posts/templates/posts/detail.html -->
 
-{% extends "base.html" %}
+{% extends "/Users/portermorgan/Documents/Python/food_blog/posts/templates/posts/posts_base.html" %}
+
 
 {% block page_title %}
     <h2> {{ post.title }} </h2>
