--- a/posts/templates/posts/posts_base.html
+++ b/posts/templates/posts/posts_base.html
@@ -1,4 +1,4 @@
-{% extends "base2.html" %}
+{% extends "base.html" %}
 
 {% block tab_title %}
     <h1>  <a href="{% url 'posts:post_index'  %}" > Saltoholic </a> </h1>
