--- a/coffee/templates/coffee/coffee_base.html
+++ b/coffee/templates/coffee/coffee_base.html
@@ -1,4 +1,4 @@
-{% extends "base2.html" %}
+{% extends "base.html" %}
 
 {% block tab_title %}
     <h1>  <a href="{% url 'coffee:coffee_index'  %}" >Coffee </a> </h1>
