--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -37,8 +37,7 @@
         {{ post.created_on.date }} | Tags:
         {% for tag in post.tags.all %}
             <a href="{% url 'posts:post_tag' tag.name %}">
-                {{ tag.name }}
-            </a>
+                {{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
         {% endfor %}
     </small>
     
