--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,22 @@
+ 
 *{
     margin:0;
     padding:0;
-    /* box-sizing: border-box;  */
+    box-sizing: border-box; 
 }
 
 body{
+    min-height: 15vh;
+    display: grid;  
+    font-size: 1.1vw;
+    background-color: darkgreen;
+    color:whitesmoke;
+    max-width: 1200px;
+    margin-left: 2vw; 
+}
+
+
+/* body{
     min-height: 15vh;
     display: grid;  
     font-size: 1rem;
@@ -12,7 +24,7 @@ body{
     color:whitesmoke;
     max-width: 800px;
     margin:1rem;
-}
+}  */
 
 title{
     position: fixed;
@@ -31,7 +43,7 @@ nav {
     right:0;
     top:0;
     text-align: right;
-    /* border: 5px solid whitesmoke; */
+     /* border: 5px solid whitesmoke;  */
 }
 
 nav a {
