--- a/coffee/templates/coffee/index.html
+++ b/coffee/templates/coffee/index.html
@@ -6,6 +6,7 @@
     <h2> All coffees </h2>
 {% endblock page_title %}
 
+<!-- If you edit the below code, you will need to make the same edits in search.html in the food_blog directory -->
 {% block page_content %}
     <div class = "main-content" >
         {% block coffees %}
