--- a/posts/templates/posts/search.html
+++ b/posts/templates/posts/search.html
@@ -1,5 +1,5 @@
 {% extends "/Users/portermorgan/Documents/Python/food_blog/posts/templates/posts/index.html" %}
 
 {% block page_title %}
-    <h2> Search for something </h2>
+    <h2> Search for recipes </h2>
 {% endblock page_title %}
