--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,36 @@
 {% extends "base.html" %}
 
 {% block page_title %}
-    <h2> Search entire site </h2>
+    <h1> Search for {{ query }} </h1>
 {% endblock page_title %}
+
+{% block page_content %}
+    <div class = "main-content" >
+        <h3> Recipe posts </h3> <br>
+        {% block posts %}
+        {% for post in posts %}
+            <h3><a href = "{% url 'posts:post_detail' slug=post.slug %}"> {{ post.title }} </a></h3>
+                {{ post.created_on.date }}
+                <p> Tags: {% for tag in post.tags.all %}
+                        <a href = "{% url 'posts:post_tag' tag.name %}">
+                            {{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+                {% endfor %} </p>
+        {% endfor %}
+        {% endblock posts %}
+        
+        <h3> Coffee posts </h3> <br>
+        {% block coffees %}
+            {% for coffee in coffees %}
+                <h3><a href = "{% url 'coffee:coffee_detail' coffee.pk %}">{{ coffee.name }}</a> </h3>
+                <p> 
+                    Roaster: <a href = "{% url 'coffee:coffee_roaster' coffee.roaster.name %}">
+                            {{ coffee.roaster }} </a> <br>
+                    {{ coffee.created_on.date }} 
+                </p>
+            {% endfor %}
+        {% endblock coffees %}
+
+    </div>
+
+    
+{% endblock page_content %}
