--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
  
 *{
     margin:0;
-    padding:0;
+    padding-left:1vh;
     box-sizing: border-box; 
 }
 
@@ -16,22 +16,6 @@ body{
 }
 
 
-/* body{
-    min-height: 15vh;
-    display: grid;  
-    font-size: 1rem;
-    background-color: darkgreen;
-    color:whitesmoke;
-    max-width: 800px;
-    margin:1rem;
-}  */
-
-title{
-    position: fixed;
-    left:0;
-    top: 0;
-    font-size: 2rem;
-}
 
 
 nav {
@@ -60,21 +44,41 @@ footer{
     position: relative;
     bottom: 0; /* Position at bottom of page */
     left: 0; /* Left of page */
+    margin-bottom: 8vh;
+
 }
 
 
 h1{
-    font-size: 4rem;
-    margin-left:1rem;
-    margin-top:1rem;
-    margin-bottom: 2rem; 
+    padding: auto;
+    font-size: 10vh;
+    /* margin-left:1rem; */
+    margin-top:3vh;
+    margin-bottom: 3vh;
+}
+
+h2{
+    padding: auto;
+    line-height: 1.5;
+    font-weight: 500;
+    margin-bottom: 2vh;
+    font-size: 2.2vw;
+    letter-spacing: .01em;
+}
+
+h3{
+    padding: auto;
+    line-height: 1.5;
+    font-weight: 500;
+    margin-bottom: 1vh;
+    font-size: 1.6vw;
 }
 
 p {
     text-align:left;
-    margin:1rem;
     padding: auto; /* maybe this will help make nicer vertical spacing? */ 
-    line-height: 1.2;
+    line-height: 1.5;
+    margin-bottom: 3vh;
 }
 
 a {  /* color of links */
@@ -86,16 +90,11 @@ a:hover { /* color of links when your cursor is on them */
     opacity: .85;
 }
 
-object {
-    position:fixed;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    top:8rem;   
-}
+
 
 figure {
     position:relative;
-    text-align:center;
+    text-align:left;
     display:inline-block; /* Wrap the figure tightly around the content */
     max-width: 100%;
 }
@@ -108,11 +107,23 @@ img.framed {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
 }
 
-figcaption {
-    font-style: italic;
-    margin-top: 2px;
-    border-radius: 4px;
+
+
+
+  .main-content {
+    float: left;
+    width: 75%; /* Or adjust based on sidebar width */
+    /* Add other styling */
+  }
+
+.gap_below{
+    margin-bottom: 8vh;
 }
+
+
+
+
+/* NOT USING THE STUFF BELOW RIGHT NOW */
 
 
 /* settings for bullet-point list */
@@ -133,8 +144,35 @@ li {
     /* Add other styling like background, padding, etc. */
   }
 
-  .main-content {
-    float: left;
-    width: 75%; /* Or adjust based on sidebar width */
-    /* Add other styling */
-  }
+
+/* body{
+    min-height: 15vh;
+    display: grid;  
+    font-size: 1rem;
+    background-color: darkgreen;
+    color:whitesmoke;
+    max-width: 800px;
+    margin:1rem;
+}  */
+
+
+/* Not doing anything? */
+/* title{
+    position: fixed;
+    left:0;
+    top: 0;
+    font-size: 2rem;
+} */
+
+object {
+    position:fixed;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    top:8rem;   
+}
+
+figcaption {
+    font-style: italic;
+    margin-top: 2px;
+    border-radius: 4px;
+}
