more work on front end

--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -3,29 +3,39 @@
 {% extends "base.html" %}
 
 {% block page_title %}
-    <h1> all recipe posts </h1>
+    <h1 style="margin-left:3vw"> all recipe posts </h1>
 {% endblock page_title %}
 
 <!-- If you edit the below code, you will need to make the same edits in search.html in the food_blog directory -->
 {% block page_content %}
-    <div class = "main-content" style="text-align: center;">
-        {% for post in posts %}
-            <h2><a href = "{% url 'posts:post_detail' slug=post.slug %}"> {{ post.title }} </a></h2>
-            <em> {{ post.created_on.date }} </em><br><br>
-            {% if post.banner %}
-                <figure>
-                    <img
-                        class = "framed"
-                        src = "{{ post.banner.url }}"
-                        alt = "{{ post.title }}"
-                        height = "400"
-                        width = "auto"
-                    />
-                </figure>
-                
-            {% endif %}
-            <br> <br>
-        {% endfor %}
+    <div class = "page_container">
+        <div class = "main-content" style="text-align: center;">
+            {% for post in posts %}
+                <h2><a href = "{% url 'posts:post_detail' slug=post.slug %}"> {{ post.title }} </a></h2>
+                <em> {{ post.created_on.date }} </em><br><br>
+                {% if post.banner %}
+                    <figure>
+                        <img
+                            class = "framed"
+                            src = "{{ post.banner.url }}"
+                            alt = "{{ post.title }}"
+                            height = "400"
+                            width = "auto"
+                        />
+                    </figure>
+                    
+                {% endif %}
+                <br> <br>
+            {% endfor %}
+        </div>
+
+        <div class = "sidebar">
+            <h2> Tags </h2>
+            {% for tag in tags %}
+                    <a href="{% url 'posts:post_tag' tag.name %}">
+                        <h3> {{ tag.name }} </h3> </a>
+            {% endfor %}
+        </div>
     </div>
 
     
